--- a/www/index.html
+++ b/www/index.html
@@ -532,7 +532,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <br>
-            <div style="text-align: center;">
+            <div style="text-align: center; background-color: rgba(.5,.5,.5,.5);">
                 <button type="button" class="btn btn-outline-success mx-auto"
                     onclick="state.show_page(pages.HOME); ">Home</button>
                 <button id="menu_upload_button" type="button" class="logged_in_content btn btn-outline-success mx-auto"
