--- a/www/index.html
+++ b/www/index.html
@@ -378,7 +378,7 @@
                 <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
                     onclick="state.show_page(pages.EDIT); ">Edit</button>
                 <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.EDIT); ">Create</button>
+                    onclick="state.show_page(pages.CREATE); ">Create</button>
                 <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_in_content btn btn-outline-primary mx-auto"
                     onclick="state.show_page(pages.PROFILE);;">Profile</button>
                 <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_out_content btn btn-outline-success mx-auto"
