--- a/www/index.html
+++ b/www/index.html
@@ -434,10 +434,12 @@
                         <button type="button" class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.POLICY);">View
                             Privacy Policy</button>
-                        <button type="button" class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.EDIT, null, null, true, false); state.request_user_catalog()">Edit</button>
-                        <button type="button" class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.QUERY);">Query</button>
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                            onclick="state.show_page(pages.BROWSE); ">Browse</button>
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                            onclick="state.show_page(pages.EDIT); ">Edit</button>
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                            onclick="state.show_page(pages.CREATE); ">Create</button>
                         <button type="button" class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.PROFILE);">Profile</button>
                         <button type="button" class="btn btn-outline-danger mx-auto"
