--- a/www/index.html
+++ b/www/index.html
@@ -37,14 +37,14 @@
                 <br>
                 <br>
                 We may however use your email to contact you with regards to anything we deem fit. We may also publicly
-                display your user name in addition to any content you edit.
+                display your name.
                 <br>
                 <br>
                 We also collect data related to the algorithms you create, edit, and fork on our site.
                 <br>
                 <br>
-                For each algorithm (and associated data) you create/edit/fork, we will not display this algorithm (or 
-                it's associated data) to any third party, unless you manually mark and save the algorithm as "public".
+                For each algorithm (and associated data) you create/edit/fork, we may display this algorithm (or 
+                it's associated data) to any third party.
                 <br>
                 <br>
                 2. Cookie Policy
