--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,41 @@
     <title>MetaHumanity.xyz</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+    <link rel="stylesheet" href="codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="codemirror/addon/dialog/dialog.css">
+    <link rel="stylesheet" href="codemirror/addon/search/matchesonscrollbar.css">
+    <link rel="stylesheet" href="codemirror/theme/the-matrix.css">
+
+    <script type="text/javascript" src="codemirror/lib/codemirror.js"></script>
+    <script type="text/javascript" src="codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="codemirror/mode/clike/clike.js"></script>
+    <script type="text/javascript" src="codemirror/mode/xml/xml.js"></script>
+
+    <script type="text/javascript" src="codemirror/addon/display/autorefresh.js"></script>
+    <script type="text/javascript" src="codemirror/addon/dialog/dialog.js"></script>
+    <script type="text/javascript" src="codemirror/addon/search/searchcursor.js"></script>
+    <script type="text/javascript" src="codemirror/addon/search/search.js"></script>
+    <script type="text/javascript" src="codemirror/addon/scroll/annotatescrollbar.js"></script>
+    <script type="text/javascript" src="codemirror/addon/search/matchesonscrollbar.js"></script>
+    <script type="text/javascript" src="codemirror/addon/search/jump-to-line.js"></script>
+
+    <!-- <script type="text/javascript" src="js/r.js"></script> -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <script lang="javascript" type="text/javascript" src="id3/binaryajax.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/bufferedbinaryajax.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/id3.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/id3v1.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/id3v2.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/id3v2frames.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/id4.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/stringutils.js"></script>
+    <script lang="javascript" type="text/javascript" src="id3/base64.js"></script>
+
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
