--- a/www/index.html
+++ b/www/index.html
@@ -1361,6 +1361,7 @@
                         break;
                     case pages.BROWSE:
                         $("#browse").fadeIn(1000);
+                        $("#menu").fadeIn(1000);
                         break;
                     case pages.EDIT:
                         this.refresh_captchas();
@@ -1368,7 +1369,8 @@
                         $("#menu").fadeIn(1000);
                         break;
                     case pages.CREATE:
-                        $("#CREATE").fadeIn(1000);
+                        $("#create").fadeIn(1000);
+                        $("#menu").fadeIn(1000);
                         break;
                     case pages.DELETE_ACCOUNT:
                         this.refresh_captchas();
