--- a/www/index.html
+++ b/www/index.html
@@ -496,37 +496,38 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
-            <div onclick="profileClicked(algorithm.owner)" class="col-xs-12 col-sm-10 col-md-8 col-lg-6 instruction"
+            <div onclick="profileClicked(algorithm.owner)" class="col-xs-12 col-sm-10 col-md-8 col-lg-6"
                 style="color:#fff!important;">
-                <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
-                    style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
+                <div onclick="profileClicked(algorithm.owner)" class="instruction">
+                    <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
+                        style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
 
-                <a style="color:#0F0!important; display:inline;">Title</a>
-                <p style="display:inline;">&nbsp;{{algorithm.name}}</p>
-                <br>
-                <a style="color:#0F0!important; display:inline;">Author</a>
-                <p style="display:inline;">&nbsp;{{algorithm.owner.name}}</p>
-                <br>
-                <a style="color:#0F0!important; display:inline;">Created</a>
-                <p style="display:inline;">&nbsp;{{getCreated()}}</p>
-                <br>
-                <a style="color:#0F0!important; display:inline;">Edited</a>
-                <p style="display:inline;">&nbsp;{{getEdited()}}</p>
-                <br>
-                <a style="color:#0F0!important; display:inline;">Views</a>
-                <p style="display:inline;">&nbsp;{{algorithm.views}}</p>
-                <br>
-                <a style="color:#0F0!important; display:inline;">Votes</a>
-                <p style="display:inline;">&nbsp;{{voteTally()}}</p>
-                <br>
-                <!--a style="color:#0F0!important; display:inline;">Comments</a>
+                    <a style="color:#0F0!important; display:inline;">Title</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.name}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Author</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.owner.name}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Created</a>
+                    <p style="display:inline;">&nbsp;{{getCreated()}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Edited</a>
+                    <p style="display:inline;">&nbsp;{{getEdited()}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Views</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.views}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Votes</a>
+                    <p style="display:inline;">&nbsp;{{voteTally()}}</p>
+                    <br>
+                    <!--a style="color:#0F0!important; display:inline;">Comments</a>
                             <p style="display:inline;">&nbsp;{{algorithm.comments.length}}</p-->
-                <br>
-                <a style="color:#0F0!important; display:inline;">Description</a>
-                <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Description</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
+                </div>
                 <div style="padding-left: 15%; padding-right: 15%; width:100%; height:auto; text-align: center;"
                     *ngIf="isUsable()">
-
                     <div style="text-align: center;">
                         <h1 class="banner center-please" style="display:inline-block;">Algorithm Title</h1>
                     </div>
