--- a/www/index.html
+++ b/www/index.html
@@ -432,120 +432,115 @@
         </div>
     </div>
 
-    <div style="display:block; position:relative; left:0px; top:0px; width:100%; height:100%;">
-        <div class="row connected_content" id="home"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
-            </div>
-            <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
-                <h1
-                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    Welcome!
-                    <br>
-                </h1>
+    <div class="row connected_content" id="home"
+        style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+        <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
+        </div>
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
+            <h1
+                style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                Welcome!
                 <br>
-                <h1 class="logged_out_content"
-                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    For more information, use one of the three option buttons below:
-                    <br>
-                    <br>
+            </h1>
+            <br>
+            <h1 class="logged_out_content"
+                style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                For more information, use one of the three option buttons below:
+                <br>
+                <br>
 
-                    <div style="text-align: center;">
-                        <button type="button" class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.LOGIN);">Login</button>
-                        <button type="button" class="btn btn-outline-primary mx-auto"
-                            onclick="state.show_page(pages.SIGNUP);">Sign
-                            Up</button>
-                        <button type="button" class="btn btn-outline-primary mx-auto"
-                            onclick="state.show_page(pages.POLICY);">View
-                            Privacy Policy</button>
-                    </div>
-                </h1>
-                <h1 class="logged_in_content"
-                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    You have successfully logged in! To continue, use one of the options below:
-                    <br>
-                    <br>
+                <div style="text-align: center;">
+                    <button type="button" class="btn btn-outline-success mx-auto"
+                        onclick="state.show_page(pages.LOGIN);">Login</button>
+                    <button type="button" class="btn btn-outline-primary mx-auto"
+                        onclick="state.show_page(pages.SIGNUP);">Sign
+                        Up</button>
+                    <button type="button" class="btn btn-outline-primary mx-auto"
+                        onclick="state.show_page(pages.POLICY);">View
+                        Privacy Policy</button>
+                </div>
+            </h1>
+            <h1 class="logged_in_content"
+                style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                You have successfully logged in! To continue, use one of the options below:
+                <br>
+                <br>
 
-                    <div style="text-align: center;">
-                        <button type="button" class="btn btn-outline-primary mx-auto"
-                            onclick="state.show_page(pages.POLICY);">View
-                            Privacy Policy</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                            class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                            class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.EDIT); ">Edit</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
-                            class="btn btn-outline-success mx-auto"
-                            onclick="state.show_page(pages.CREATE); ">Create</button>
-                        <button type="button" class="btn btn-outline-primary mx-auto"
-                            onclick="state.show_page(pages.PROFILE);">Profile</button>
-                        <button type="button" class="btn btn-outline-danger mx-auto"
-                            onclick="state.show_page(pages.LOGOUT);">Log
-                            Out</button>
-                    </div>
-                </h1>
-            </div>
-            <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
-            </div>
+                <div style="text-align: center;">
+                    <button type="button" class="btn btn-outline-primary mx-auto"
+                        onclick="state.show_page(pages.POLICY);">View
+                        Privacy Policy</button>
+                    <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        class="btn btn-outline-success mx-auto"
+                        onclick="state.show_page(pages.BROWSE); ">Browse</button>
+                    <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.EDIT); ">Edit</button>
+                    <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                        class="btn btn-outline-success mx-auto"
+                        onclick="state.show_page(pages.CREATE); ">Create</button>
+                    <button type="button" class="btn btn-outline-primary mx-auto"
+                        onclick="state.show_page(pages.PROFILE);">Profile</button>
+                    <button type="button" class="btn btn-outline-danger mx-auto"
+                        onclick="state.show_page(pages.LOGOUT);">Log
+                        Out</button>
+                </div>
+            </h1>
+        </div>
+        <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
         </div>
     </div>
-    <div style="display:block; position:relative; left:0px; top:0px; width:100%; height:100%;">
-        <div class="row connected_content" id="edit"
-            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
-            </div>
-            <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
-                <div onclick="profileClicked(algorithm.owner)" class="instruction" style="color:#fff!important;">
-                    <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
-                        style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
+    <div class="row connected_content" id="edit"
+        style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
+        <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
+        </div>
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
+            <div onclick="profileClicked(algorithm.owner)" class="instruction" style="color:#fff!important;">
+                <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
+                    style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
 
-                    <a style="color:#0F0!important; display:inline;">Title</a>
-                    <p style="display:inline;">&nbsp;{{algorithm.name}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Author</a>
-                    <p style="display:inline;">&nbsp;{{algorithm.owner.name}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Created</a>
-                    <p style="display:inline;">&nbsp;{{getCreated()}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Edited</a>
-                    <p style="display:inline;">&nbsp;{{getEdited()}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Views</a>
-                    <p style="display:inline;">&nbsp;{{algorithm.views}}</p>
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Votes</a>
-                    <p style="display:inline;">&nbsp;{{voteTally()}}</p>
-                    <br>
-                    <!--a style="color:#0F0!important; display:inline;">Comments</a>
+                <a style="color:#0F0!important; display:inline;">Title</a>
+                <p style="display:inline;">&nbsp;{{algorithm.name}}</p>
+                <br>
+                <a style="color:#0F0!important; display:inline;">Author</a>
+                <p style="display:inline;">&nbsp;{{algorithm.owner.name}}</p>
+                <br>
+                <a style="color:#0F0!important; display:inline;">Created</a>
+                <p style="display:inline;">&nbsp;{{getCreated()}}</p>
+                <br>
+                <a style="color:#0F0!important; display:inline;">Edited</a>
+                <p style="display:inline;">&nbsp;{{getEdited()}}</p>
+                <br>
+                <a style="color:#0F0!important; display:inline;">Views</a>
+                <p style="display:inline;">&nbsp;{{algorithm.views}}</p>
+                <br>
+                <a style="color:#0F0!important; display:inline;">Votes</a>
+                <p style="display:inline;">&nbsp;{{voteTally()}}</p>
+                <br>
+                <!--a style="color:#0F0!important; display:inline;">Comments</a>
                                 <p style="display:inline;">&nbsp;{{algorithm.comments.length}}</p-->
-                    <br>
-                    <a style="color:#0F0!important; display:inline;">Description</a>
-                    <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
-                    <div style="padding-left: 15%; padding-right: 15%; width:100%; height:auto; text-align: center;"
-                        *ngIf="isUsable()">
+                <br>
+                <a style="color:#0F0!important; display:inline;">Description</a>
+                <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
+                <div style="padding-left: 15%; padding-right: 15%; width:100%; height:auto; text-align: center;"
+                    *ngIf="isUsable()">
 
-                        <div style="text-align: center;">
-                            <h1 class="banner center-please" style="display:inline-block;">Algorithm Title</h1>
-                        </div>
-                        <input style="color:#fff; width: 100%;" placeholder="Algorithm name..."
-                            [(ngModel)]="algorithm.name"></input>
+                    <div style="text-align: center;">
+                        <h1 class="banner center-please" style="display:inline-block;">Algorithm Title</h1>
                     </div>
-                    <div style="padding-left: 15%; padding-right: 15%; width:100%; height:auto; text-align: center;"
-                        *ngIf="isUsable()">
+                    <input style="color:#fff; width: 100%;" placeholder="Algorithm name..."
+                        [(ngModel)]="algorithm.name"></input>
+                </div>
+                <div style="padding-left: 15%; padding-right: 15%; width:100%; height:auto; text-align: center;"
+                    *ngIf="isUsable()">
 
-                        <div style="text-align: center;">
-                            <h1 class="banner center-please" style="display:inline-block;">Algorithm Description</h1>
-                        </div>
-                        <textarea id="comment" rows="8" placeholder="Enter description here..."
-                            [(ngModel)]="algorithm.description"></textarea>
+                    <div style="text-align: center;">
+                        <h1 class="banner center-please" style="display:inline-block;">Algorithm Description</h1>
                     </div>
+                    <textarea id="comment" rows="8" placeholder="Enter description here..."
+                        [(ngModel)]="algorithm.description"></textarea>
                 </div>
-                <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
-                </div>
+            </div>
+            <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
         </div>
     </div>
