--- a/www/index.html
+++ b/www/index.html
@@ -429,7 +429,8 @@
     </div>
 
     <div style="display:block; position:relative; left:0px; top:0px; width:100%; height:100%;">
-        <div class="row connected_content" id="home">
+        <div class="row connected_content" id="home"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
@@ -484,7 +485,8 @@
             </div>
         </div>
 
-        <div class="row connected_content" id="edit">
+        <div class="row connected_content" id="edit"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
@@ -494,7 +496,8 @@
             </div>
         </div>
 
-        <div class="row connected_content" id="delete_account">
+        <div class="row connected_content" id="delete_account"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
@@ -555,7 +558,8 @@
             </h1>
         </div>
 
-        <div class="row connected_content" id="profile">
+        <div class="row connected_content" id="profile"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
@@ -576,7 +580,8 @@
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
         </div>
-        <div class="row connected_content" id="query">
+        <div class="row connected_content" id="query"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6" style="text-align:center!important">
@@ -585,7 +590,8 @@
             </div>
         </div>
 
-        <div class="row connected_content" id="login">
+        <div class="row connected_content" id="login"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
@@ -665,7 +671,8 @@
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
         </div>
-        <div class="row connected_content" id="signup">
+        <div class="row connected_content" id="signup"
+            style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
