--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
                 We also collect data related to the algorithms you create, edit, and fork on our site.
                 <br>
                 <br>
-                For each algorithm (and associated data) you create/edit/fork, we may display this algorithm (or 
+                For each algorithm (and associated data) you create/edit/fork, we may display this algorithm (or
                 it's associated data) to any third party.
                 <br>
                 <br>
@@ -404,22 +404,26 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <br>
             <div style="text-align: center;">
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.HOME); ">Home</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.EDIT); ">Edit</button>
-                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
-                    onclick="state.show_page(pages.CREATE); ">Create</button>
-                <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_in_content btn btn-outline-primary mx-auto"
+                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.HOME); ">Home</button>
+                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.BROWSE); ">Browse</button>
+                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.EDIT); ">Edit</button>
+                <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                    class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.CREATE); ">Create</button>
+                <button id="menu_profile_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+                    class="logged_in_content btn btn-outline-primary mx-auto"
                     onclick="state.show_page(pages.PROFILE);;">Profile</button>
-                <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_out_content btn btn-outline-success mx-auto"
+                <button id="menu_login_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+                    class="logged_out_content btn btn-outline-success mx-auto"
                     onclick="state.show_page(pages.LOGIN);">Login</button>
-                <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_out_content btn btn-outline-primary mx-auto"
+                <button id="menu_signup_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+                    class="logged_out_content btn btn-outline-primary mx-auto"
                     onclick="state.show_page(pages.SIGNUP);">Sign
                     Up</button>
-                <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button" class="logged_in_content btn btn-outline-danger mx-auto"
+                <button id="menu_logout_button" style=" background-color: rgba(.25,.25,.25,.75);" type="button"
+                    class="logged_in_content btn btn-outline-danger mx-auto"
                     onclick="state.show_page(pages.LOGOUT);">Log
                     Out</button>
             </div>`
@@ -467,11 +471,14 @@
                         <button type="button" class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.POLICY);">View
                             Privacy Policy</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                            class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                            class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.EDIT); ">Edit</button>
-                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);" class="btn btn-outline-success mx-auto"
+                        <button type="button" style=" background-color: rgba(.25,.25,.25,.75);"
+                            class="btn btn-outline-success mx-auto"
                             onclick="state.show_page(pages.CREATE); ">Create</button>
                         <button type="button" class="btn btn-outline-primary mx-auto"
                             onclick="state.show_page(pages.PROFILE);">Profile</button>
@@ -490,7 +497,34 @@
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
-                Meow
+                <div onclick="profileClicked(algorithm.owner)" class="instruction" style="color:#fff!important;">
+                    <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
+                        style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
+
+                    <a style="color:#0F0!important; display:inline;">Title</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.name}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Author</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.owner.name}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Created</a>
+                    <p style="display:inline;">&nbsp;{{getCreated()}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Edited</a>
+                    <p style="display:inline;">&nbsp;{{getEdited()}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Views</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.views}}</p>
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Votes</a>
+                    <p style="display:inline;">&nbsp;{{voteTally()}}</p>
+                    <br>
+                    <!--a style="color:#0F0!important; display:inline;">Comments</a>
+                            <p style="display:inline;">&nbsp;{{algorithm.comments.length}}</p-->
+                    <br>
+                    <a style="color:#0F0!important; display:inline;">Description</a>
+                    <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
+                </div>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
@@ -767,7 +801,7 @@
             var multiplier = Math.pow(10, places);
             return Math.round(num * multiplier) / multiplier;
         }
-        
+
         function load_tree(onload_callback) {
             var iframe = document.createElement("iframe");
             iframe.onload = on_resources_loaded;
@@ -1605,7 +1639,7 @@
 
             state.back();
         }
-        
+
         window.onpopstate = function (event) {
             console.log(event);
             state.pop_page(event)
