--- a/www/index.html
+++ b/www/index.html
@@ -497,7 +497,8 @@
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
-                <div onclick="profileClicked(algorithm.owner)" class="instruction" style="color:#fff!important;">
+                <h1 onclick="profileClicked(algorithm.owner)" 
+                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
                         style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
 
@@ -524,7 +525,7 @@
                     <br>
                     <a style="color:#0F0!important; display:inline;">Description</a>
                     <p style="display:inline;">&nbsp;{{algorithm.description}}</p>
-                </div>
+                </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
             </div>
