--- a/www/index.html
+++ b/www/index.html
@@ -503,27 +503,28 @@
                         style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
 
                     <a style="color:#0F0!important; display:inline;">Title:</a>&nbsp;
-                    <p style="display:inline;">{{algorithm.name}}</p>
+                    <p id="algorithm_name" style="display:inline;"></p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Author:</a>&nbsp;
-                    <p style="display:inline;">{{algorithm.owner.name}}:</p>
+                    <p id="algorithm_author" style="display:inline;">{{algorithm.owner.name}}:</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Created:</a>&nbsp;
-                    <p style="display:inline;">{{getCreated()}}</p>
+                    <p id="algorithm_created" style="display:inline;">{{getCreated()}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Edited:</a>&nbsp;
-                    <p style="display:inline;">{{getEdited()}}</p>
+                    <p id="algorithm_edited" style="display:inline;">{{getEdited()}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Views:</a>&nbsp;
-                    <p style="display:inline;">{{algorithm.views}}</p>
+                    <p id="algorithm_views" style="display:inline;">{{algorithm.views}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Votes:</a>&nbsp;
-                    <p style="display:inline;">{{voteTally()}}</p>
+                    <p id="algorithm_vote_total" style="display:inline;">{{voteTally()}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Comments:</a>&nbsp;
-                    <p style="display:inline;">{{algorithm.comments.length}}</p>
+                    <p id="algorithm_comment_count" style="display:inline;">{{algorithm.comments.length}}</p>
+                    <br>
                     <a style="color:#0F0!important; display:inline;">Description:</a>&nbsp;
-                    <p style="display:inline;">{{algorithm.description}}</p>
+                    <p id="algorithm_description" style="display:inline;">{{algorithm.description}}</p>
                 </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
