--- a/www/index.html
+++ b/www/index.html
@@ -503,10 +503,10 @@
                         style="height:100% !important; max-height:128px !important; width:auto!important; clear: right !important; float: left !important; border: 2px solid #0f0 !important;" />
 
                     <a style="color:#0F0!important; display:inline;">Title:</a>&nbsp;
-                    <p id="algorithm_name" style="display:inline;"></p>
+                    <p id="algorithm_name" style="display:inline;">{{algorithm.name}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Author:</a>&nbsp;
-                    <p id="algorithm_author" style="display:inline;">{{algorithm.owner.name}}:</p>
+                    <p id="algorithm_author" style="display:inline;">{{algorithm.owner.name}}</p>
                     <br>
                     <a style="color:#0F0!important; display:inline;">Created:</a>&nbsp;
                     <p id="algorithm_created" style="display:inline;">{{getCreated()}}</p>
