--- a/www/index.html
+++ b/www/index.html
@@ -529,10 +529,8 @@
                 
                 <h1 onclick="profileClicked(algorithm.owner)" class="editable"
                     style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div style="text-align: center;">
-                        <h1 class="banner center-please" style="display:inline-block;">Algorithm Title</h1>
-                    </div>
-                    <input style="color:#fff; width: 100%;" placeholder="Algorithm name...">{{algorithm.name}}</input>
+                    <h1 style="display:inline-block; width:50%;">Algorithm Title</h1>
+                    <input style="display:inline-block; color:#fff; width: 45%;" placeholder="Algorithm name...">{{algorithm.name}}</input>
                 </h1>
             </div>
             <div class="col-xs-0 col-sm-1 col-md-2 col-lg-3">
