--- a/www/index.html
+++ b/www/index.html
@@ -528,8 +528,8 @@
                 </h1>
                 
                 <h1 onclick="profileClicked(algorithm.owner)" class="editable"
-                    style="padding: 18px; text-align:left; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <label style="display:inline-block; width:50%;">Algorithm Title</label>
+                    style="padding: 18px; text-align:center; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <label style="display:inline-block; width:45%;">Algorithm Title</label>
                     <input style="display:inline-block; color:#fff; width: 45%;" placeholder="Algorithm name..." value="{{algorithm.name}}"></input>
                 </h1>
             </div>
