--- a/www/index.html
+++ b/www/index.html
@@ -498,7 +498,7 @@
             </div>
             <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6">
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
-                    style="padding: 18px; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="text-align:center; padding: 18px; color:#fff; font-size: 18px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
                         style="height:100% !important; max-height:128px !important; border: 2px solid #0f0 !important;" />
                     <br>
